feat: 新增鉴权风险评分与右键菜单，完善元数据展示并修复 Display 刷新异常